--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container" id="container">
-        <div class="heart"></div>
+        <!-- <div class="heart"></div> -->
+        <h1>HOLIS</h1>
+        <img src="heart_two.svg" class="heart" width="80" height="80"/>
     </div>
     <script src="anime.min.js"></script>
     <script src="index.js"></script>
