- Se cambia el texto con css3

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container" id="container">
         <!-- <div class="heart"></div> -->
-        <h1>HOLIS</h1>
-        <img src="heart_two.svg" class="heart" width="80" height="80"/>
+        <h1 id="text" ><span id="change"></span></h1>
+        <img src="heart_thri.png" class="heart" />
     </div>
     <script src="anime.min.js"></script>
     <script src="index.js"></script>
