--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container" id="container">
         <!-- <div class="heart"></div> -->
         <h1 id="text" ><span id="change"></span></h1>
-        <img src="heart_thri.png" class="heart" />
+        <img src="assets/heart_thri.png" class="heart" />
     </div>
-    <script src="anime.min.js"></script>
-    <script src="index.js"></script>
+    <script src="js/anime.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
